--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
 
             <div class="box code">
-                <a href="https://malith-gimhana.github.io/backgroundvideo.github.io/">
+                <a href="https://techforgeeks.github.io/Travel-in-Sri-Lanka/">
                 <img src="images/projects/p2.jpg">
                 <div class="info">
                     <h3>Travel in Sri Lanka<br><center>Website</center></h3>
