--- a/index.html
+++ b/index.html
@@ -256,6 +256,15 @@
                 </a>
             </div>
 
+            <div class="box code">
+                <a href="https://techforgeeks.github.io/Follow-The-Cursor-Animation/">
+                <img src="images/projects/p13.jpg">
+                <div class="info">
+                    <center><h3>Follow The Cursor Animation</h3></center>
+                </div>
+                </a>
+            </div>
+
     <!--   <div class="box code">
                 <a href="">
                 <img src="">
@@ -377,6 +386,13 @@
             <a href="https://github.com/TECHforGEEKS/Toggle-Dark-and-Light-Mode/archive/refs/heads/master.zip"><div class="btn">click to download <i class="fas fa-download"></i></div></a>
         </div>
 
+        <div class="box code">
+            <span class="number">12</span>
+            <img src="images/services/s6.png">
+            <h3>Follow The Cursor Animation</h3>
+            <p></p>
+            <a href="https://github.com/TECHforGEEKS/Follow-The-Cursor-Animation/archive/refs/heads/master.zip"><div class="btn">click to download <i class="fas fa-download"></i></div></a>
+        </div>
 
     </div>
 
