Setup index.html

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 				</div>
 
 				<div class="box code">
-					<a href="https://malith-gimhana.github.io/backgroundvideo.github.io/">
+					<a href="https://techforgeeks.github.io/Travel-in-Sri-Lanka/">
 						<img src="images/projects/p2.jpg" />
 						<div class="info">
 							<h3>
