--- a/index.html
+++ b/index.html
@@ -135,20 +135,59 @@
 
 			<div class="image-container">
 				<div class="box design">
-					<a href="https://techforgeeks.github.io/Parallax-Scrolling-Website/">
-						<img src="images/projects/p1.jpg" />
+					<a
+						href="https://github.com/oshadhashiro404/Cryptopunk-Clone"
+						target="_blank"
+					>
+						<img src="images/projects/cryptopunks.png" />
 						<div class="info">
-							<h3>
-								Parallax Scrolling<br />
-								<center>Website</center>
-							</h3>
+							<h3>Cryptopunk Clone</h3>
+						</div>
+					</a>
+				</div>
+
+				<div class="box design">
+					<a href="https://netflix-clone-e794c.web.app/" target="_blank">
+						<img src="images/projects/netflix.png" />
+						<div class="info">
+							<h3>Netflix Clone</h3>
+						</div>
+					</a>
+				</div>
+
+				<div class="box glassmorphism">
+					<a href="https://spotify-clone-6a31a.web.app/" target="_blank">
+						<img src="images/projects/spotify.png" />
+						<div class="info">
+							<h3>Spotify Clone</h3>
+						</div>
+					</a>
+				</div>
+
+				<div class="box design">
+					<a href="https://chat-app-techforgeeks.vercel.app/" target="_blank">
+						<img src="images/projects/chat-app.png" />
+						<div class="info">
+							<h3>Decentralized Chat App</h3>
 						</div>
 					</a>
 				</div>
 
 				<div class="box code">
-					<a href="https://techforgeeks.github.io/Travel-in-Sri-Lanka/">
-						<img src="images/projects/p2.jpg" />
+					<a href="https://goalsetterapp-mern.herokuapp.com/" target="_blank">
+						<img src="images/projects/goal-setter.png" />
+						<div class="info">
+							<h3>Goal Setter App</h3>
+						</div>
+					</a>
+				</div>
+
+				<div class="box code">
+					<a
+						href="https://oshadhashiro404.github.io/Travel-in-Sri-Lanka/"
+						target="_blank"
+					>
+						<img src="images/projects/travel.png" />
 						<div class="info">
 							<h3>
 								Travel in Sri Lanka<br />
@@ -158,68 +197,12 @@
 					</a>
 				</div>
 
-				<div class="box design">
-					<a href="https://techforgeeks.github.io/Glassmorphism-Calculator/">
-						<img src="images/projects/p3.jpg" />
-						<div class="info">
-							<h3>Glassmorphism Calculator</h3>
-						</div>
-					</a>
-				</div>
-
-				<div class="box design">
-					<a href="https://techforgeeks.github.io/Glassmorphism_Calendar/">
-						<img src="images/projects/p4.jpg" />
-						<div class="info">
-							<h3>Glassmorphism-Calendar</h3>
-						</div>
-					</a>
-				</div>
-
-				<div class="box glassmorphism">
-					<a href="https://techforgeeks.github.io/Service-Section/">
-						<img src="images/projects/p5.jpg" />
-						<div class="info">
-							<h3>Service Section</h3>
-						</div>
-					</a>
-				</div>
-
-				<div class="box design">
-					<a href="https://techforgeeks.github.io/3D-Social-Media-Icons/">
-						<img src="images/projects/p6.jpg" />
-						<div class="info">
-							<h3>3D Social Media Icons</h3>
-						</div>
-					</a>
-				</div>
-
 				<div class="box code">
-					<a href="https://techforgeeks.github.io/Analog-Clock/">
-						<img src="images/projects/p7.jpg" />
-						<div class="info">
-							<h3>Analog Clock</h3>
-						</div>
-					</a>
-				</div>
-
-				<div class="box design">
 					<a
-						href="https://techforgeeks.github.io/3D-Wavy-Circle-Loader-Animation/"
+						href="https://oshadhashiro404.github.io/Calculator/"
+						target="_blank"
 					>
-						<img src="images/projects/p8.jpg" />
-						<div class="info">
-							<h3>
-								3D Wavy Circle Loader<br />
-								<center>Animation</center>
-							</h3>
-						</div>
-					</a>
-				</div>
-
-				<div class="box code">
-					<a href="https://techforgeeks.github.io/Calculator/">
-						<img src="images/projects/p9.jpg" />
+						<img src="images/projects/calculator.jpg" />
 						<div class="info">
 							<h3>Calculator</h3>
 						</div>
@@ -228,74 +211,15 @@
 
 				<div class="box code">
 					<a
-						href="https://techforgeeks.github.io/Random-Color-Slots-Generator/"
+						href="https://oshadhashiro404.github.io/Random-Color-Slots-Generator/"
+						target="_blank"
 					>
-						<img src="images/projects/p10.jpg" />
+						<img src="images/projects/color.jpg" />
 						<div class="info">
 							<h3>
 								Random Color Slots<br />
 								<center>Generator</center>
 							</h3>
-						</div>
-					</a>
-				</div>
-
-				<div class="box code">
-					<a href="https://techforgeeks.github.io/Shooting-Stars-Animation/">
-						<img src="images/projects/p11.jpg" />
-						<div class="info">
-							<h3>
-								Shooting Stars<br />
-								<center>Animation</center>
-							</h3>
-						</div>
-					</a>
-				</div>
-
-				<div class="box code">
-					<a href="https://techforgeeks.github.io/Toggle-Dark-and-Light-Mode/">
-						<img src="images/projects/p12.jpg" />
-						<div class="info">
-							<h3>
-								Toggle Dark and Light<br />
-								<center>Mode</center>
-							</h3>
-						</div>
-					</a>
-				</div>
-
-				<div class="box code">
-					<a href="https://techforgeeks.github.io/Follow-The-Cursor-Animation/">
-						<img src="images/projects/p13.jpg" />
-						<div class="info">
-							<center><h3>Follow The Cursor Animation</h3></center>
-						</div>
-					</a>
-				</div>
-
-				<div class="box code">
-					<a href="https://netflix-clone-e794c.web.app/">
-						<img src="images/projects/p14.png" />
-						<div class="info">
-							<h3>Netflix Clone</h3>
-						</div>
-					</a>
-				</div>
-
-				<div class="box code">
-					<a href="https://spotify-clone-6a31a.web.app/">
-						<img src="images/projects/p15.png" />
-						<div class="info">
-							<h3>Spotify Clone</h3>
-						</div>
-					</a>
-				</div>
-
-				<div class="box code">
-					<a href="https://github.com/TECHforGEEKS/Cryptopunk-Clone">
-						<img src="images/projects/p16.png" />
-						<div class="info">
-							<h3>Cryptopunk Clone</h3>
 						</div>
 					</a>
 				</div>
@@ -319,13 +243,13 @@
 			<h1 class="heading">my <span>source codes</span></h1>
 
 			<div class="box-container">
-				<div class="box design">
+				<div class="box code">
 					<span class="number">1</span>
 					<img src="images/services/s5.png" />
-					<h3>Parallax Scrolling Website</h3>
+					<h3>Cryptopunk Clone</h3>
 					<p></p>
 					<a
-						href="https://github.com/TECHforGEEKS/Parallax-Scrolling-Website/archive/refs/heads/master.zip"
+						href="https://github.com/oshadhashiro404/Cryptopunk-Clone/archive/refs/heads/master.zip"
 						><div class="btn">
 							click to download <i class="fas fa-download"></i></div
 					></a>
@@ -334,58 +258,58 @@
 				<div class="box code">
 					<span class="number">2</span>
 					<img src="images/services/s5.png" />
-					<h3>Travel in Sri Lanka Website</h3>
+					<h3>Netflix Clone</h3>
 					<p></p>
 					<a
-						href="https://github.com/TECHforGEEKS/Travel-in-Sri-Lanka/archive/refs/heads/master.zip"
+						href="https://github.com/oshadhashiro404/Netflix-Clone/archive/refs/heads/master.zip"
 						><div class="btn">
 							click to download <i class="fas fa-download"></i></div
 					></a>
 				</div>
 
-				<div class="box design">
+				<div class="box code">
 					<span class="number">3</span>
-					<img src="images/services/s3.png" />
-					<h3>Glassmorphism Calculator</h3>
+					<img src="images/services/s5.png" />
+					<h3>Spotify Clone</h3>
 					<p></p>
 					<a
-						href="https://github.com/TECHforGEEKS/Glassmorphism-Calculator/archive/refs/heads/master.zip"
+						href="https://github.com/oshadhashiro404/Spotify-Clone/archive/refs/heads/master.zip"
 						><div class="btn">
 							click to download <i class="fas fa-download"></i></div
 					></a>
 				</div>
 
-				<div class="box design">
+				<div class="box code">
 					<span class="number">4</span>
-					<img src="images/services/s3.png" />
-					<h3>Glassmorphism Calendar</h3>
+					<img src="images/services/s5.png" />
+					<h3>Decentralized Chat App</h3>
 					<p></p>
 					<a
-						href="https://github.com/TECHforGEEKS/Glassmorphism_Calendar/archive/refs/heads/master.zip"
+						href="https://github.com/oshadhashiro404/Chat-app/archive/refs/heads/main.zip"
 						><div class="btn">
 							click to download <i class="fas fa-download"></i></div
 					></a>
 				</div>
 
-				<div class="box glassmorphism">
+				<div class="box code">
 					<span class="number">5</span>
-					<img src="images/services/s6.png" />
-					<h3>Service Section</h3>
+					<img src="images/services/s5.png" />
+					<h3>Goal Setter App</h3>
 					<p></p>
 					<a
-						href="https://github.com/TECHforGEEKS/Service-Section/archive/refs/heads/master.zip"
+						href="https://github.com/oshadhashiro404/Goal-Setter-App/archive/refs/heads/master.zip"
 						><div class="btn">
 							click to download <i class="fas fa-download"></i></div
 					></a>
 				</div>
 
-				<div class="box design">
+				<div class="box code">
 					<span class="number">6</span>
-					<img src="images/services/s6.png" />
-					<h3>3D Social Media Icons</h3>
+					<img src="images/services/s5.png" />
+					<h3>Travel in Sri Lanka</h3>
 					<p></p>
 					<a
-						href="https://github.com/TECHforGEEKS/3D-Social-Media-Icons/archive/refs/heads/master.zip"
+						href="https://github.com/oshadhashiro404/Travel-in-Sri-Lanka/archive/refs/heads/master.zip"
 						><div class="btn">
 							click to download <i class="fas fa-download"></i></div
 					></a>
@@ -394,118 +318,22 @@
 				<div class="box code">
 					<span class="number">7</span>
 					<img src="images/services/s3.png" />
-					<h3>Analog Clock</h3>
+					<h3>Random Color Slots Generator</h3>
 					<p></p>
 					<a
-						href="https://github.com/TECHforGEEKS/Analog-Clock/archive/refs/heads/master.zip"
-						><div class="btn">
-							click to download <i class="fas fa-download"></i></div
-					></a>
-				</div>
-
-				<div class="box design">
-					<span class="number">8</span>
-					<img src="images/services/s6.png" />
-					<h3>3D Wavy Circle Loade Animation</h3>
-					<p></p>
-					<a
-						href="https://github.com/TECHforGEEKS/3D-Wavy-Circle-Loader-Animation/archive/refs/heads/master.zip"
+						href="https://github.com/oshadhashiro404/Random-Color-Slots-Generator/archive/refs/heads/master.zip"
 						><div class="btn">
 							click to download <i class="fas fa-download"></i></div
 					></a>
 				</div>
 
 				<div class="box code">
-					<span class="number">9</span>
+					<span class="number">8</span>
 					<img src="images/services/s3.png" />
 					<h3>Calculator</h3>
 					<p></p>
 					<a
-						href="https://github.com/TECHforGEEKS/Calculator/archive/refs/heads/master.zip"
-						><div class="btn">
-							click to download <i class="fas fa-download"></i></div
-					></a>
-				</div>
-
-				<div class="box code">
-					<span class="number">10</span>
-					<img src="images/services/s6.png" />
-					<h3>Random Color Slots Generator</h3>
-					<p></p>
-					<a
-						href="https://github.com/TECHforGEEKS/Random-Color-Slots-Generator/archive/refs/heads/master.zip"
-						><div class="btn">
-							click to download <i class="fas fa-download"></i></div
-					></a>
-				</div>
-
-				<div class="box code">
-					<span class="number">11</span>
-					<img src="images/services/s6.png" />
-					<h3>Shooting Stars Animation</h3>
-					<p></p>
-					<a
-						href="https://github.com/TECHforGEEKS/Shooting-Stars-Animation/archive/refs/heads/master.zip"
-						><div class="btn">
-							click to download <i class="fas fa-download"></i></div
-					></a>
-				</div>
-
-				<div class="box code">
-					<span class="number">12</span>
-					<img src="images/services/s6.png" />
-					<h3>Toggle Dark and Light Mode</h3>
-					<p></p>
-					<a
-						href="https://github.com/TECHforGEEKS/Toggle-Dark-and-Light-Mode/archive/refs/heads/master.zip"
-						><div class="btn">
-							click to download <i class="fas fa-download"></i></div
-					></a>
-				</div>
-
-				<div class="box code">
-					<span class="number">13</span>
-					<img src="images/services/s6.png" />
-					<h3>Follow The Cursor Animation</h3>
-					<p></p>
-					<a
-						href="https://github.com/TECHforGEEKS/Follow-The-Cursor-Animation/archive/refs/heads/master.zip"
-						><div class="btn">
-							click to download <i class="fas fa-download"></i></div
-					></a>
-				</div>
-
-				<div class="box code">
-					<span class="number">14</span>
-					<img src="images/services/s5.png" />
-					<h3>Netflix Clone</h3>
-					<p></p>
-					<a
-						href="https://github.com/TECHforGEEKS/Netflix-Clone/archive/refs/heads/master.zip"
-						><div class="btn">
-							click to download <i class="fas fa-download"></i></div
-					></a>
-				</div>
-
-				<div class="box code">
-					<span class="number">15</span>
-					<img src="images/services/s5.png" />
-					<h3>Spotify Clone</h3>
-					<p></p>
-					<a
-						href="https://github.com/TECHforGEEKS/Spotify-Clone/archive/refs/heads/master.zip"
-						><div class="btn">
-							click to download <i class="fas fa-download"></i></div
-					></a>
-				</div>
-
-				<div class="box code">
-					<span class="number">16</span>
-					<img src="images/services/s5.png" />
-					<h3>Cryptopunk Clone</h3>
-					<p></p>
-					<a
-						href="https://github.com/TECHforGEEKS/Cryptopunk-Clone/archive/refs/heads/master.zip"
+						href="https://github.com/oshadhashiro404/Calculator/archive/refs/heads/master.zip"
 						><div class="btn">
 							click to download <i class="fas fa-download"></i></div
 					></a>
@@ -559,7 +387,7 @@
 
 				<iframe
 					class="map"
-					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d990.4698667227464!2d79.92312872921663!3d6.7845198314072395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae24f88be836603%3A0x4de450b10466f2a4!2sEpitahawatta%20Rd%2C%20Piliyandala!5e0!3m2!1sen!2slk!4v1635315081570!5m2!1sen!2slk"
+					src="https://www.google.lk/maps/embed?pb=!1m18!1m12!1m3!1d990.4698667227464!2d79.92312872921663!3d6.7845198314072395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae24f88be836603%3A0x4de450b10466f2a4!2sEpitahawatta%20Rd%2C%20Piliyandala!5e0!3m2!1sen!2slk!4v1635315081570!5m2!1sen!2slk"
 					width="600"
 					height="390"
 					style="border: 0"
@@ -575,19 +403,19 @@
 
 		<footer>
 			<div class="social-links">
-				<a href="https://github.com/techforgeeks">
+				<a href="https://github.com/oshadhashiro404" target="_blank">
 					<i class="fab fa-github"></i> </a
 				>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-				<a href="https://facebook.com/techforgeeks">
+				<a href="https://facebook.com/oshadhashiro404" target="_blank">
 					<i class="fab fa-facebook-f"></i> </a
 				>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-				<a href="https://www.instagram.com/techforgeeks49/">
+				<a href="https://www.instagram.com/oshadhashiro404/" target="_blank">
 					<i class="fab fa-instagram"></i> </a
 				>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-				<a href="#">
+				<a href="https://twitter.com/OshadhaShiro" target="_blank">
 					<i class="fab fa-twitter"></i>
 				</a>
 			</div>
