--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		<!------custom css file link---->
 		<link rel="stylesheet" href="CSS/style.css" />
 
+		<link rel="shortcut icon" href="images/code.jpg" type="image/x-icon" />
+
 		<!--Start of Tawk.to Script-->
 		<script type="text/javascript">
 			var Tawk_API = Tawk_API || {},
